[package]
name = "libdune"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
test = []
syscall = []
debug = []
apic = []
elf = []

[build-dependencies]
cc = "1.0"

[dependencies]
goblin = "0.9.2"
lazy_static = "1.5.0"
libc = "0.2.164"
paste = "1.0.15"
x86_64 = "0.15.1"
dune-sys = { path = "../dune-sys" }
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
chrono = "0.4.38"
