[package]
name = "libdune"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
# default = ["dune", "signal", "debug"]
default = ["dune", "signal", "debug", "mm", "syscall"]
test = []
signal = []
syscall = []
debug = []
apic = []
elf = []
dune = []
vmpl = []
mm = []

[build-dependencies]
cc = "1.0"

[dependencies]
goblin = "0.9.2"
lazy_static = "1.5.0"
libc = "0.2.164"
paste = "1.0.15"
x86_64 = "0.15.1"
dune-sys = { path = "../dune-sys" }
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
chrono = "0.4.38"
spin = "0.9.8"
bit_field = "0.10.2"
bitflags = "2.6.0"
rand = "0.8.5"
nix = "0.29.0"
